RESOLVED FIXED 247351
REGRESSION (255929@main): Some Facebook links cannot be opened in Safari
https://bugs.webkit.org/show_bug.cgi?id=247351
Summary REGRESSION (255929@main): Some Facebook links cannot be opened in Safari
Wenson Hsieh
Reported 2022-11-01 20:13:37 PDT
.
Attachments
Wenson Hsieh
Comment 1 2022-11-01 20:13:55 PDT
Wenson Hsieh
Comment 2 2022-11-01 20:23:23 PDT
EWS
Comment 3 2022-11-01 22:54:17 PDT
Committed 256213@main (495019c115fe): <https://commits.webkit.org/256213@main> Reviewed commits have been landed. Closing PR #6023 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.