REGRESSION (255929@main): Some Facebook links cannot be opened in Safari https://bugs.webkit.org/show_bug.cgi?id=247351 rdar://101818726

Reviewed by Tim Horton and John Wilander.

Guard the new call to `WebFrameProxy::swapToProcess()` (which is currently a no-op) behind the
experimental `SiteIsolationEnabled` feature flag.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueNavigationInNewProcess):

Canonical link: https://commits.webkit.org/256213@main